# robotnik_base_hw_sim

./: CMakeLists.txt  README.md  package.xml  robotnik_elevator_controller_plugins.xml  setup.py
config/: elevator_fake_pickup_gazebo.yaml  omnitheron.yaml  rb1.yaml  rb1_base.yaml  rb2.yaml  rb_theron.yaml  rbkairos_a.yaml  rbrobout.yaml  rbvogui_6w.yaml  rbvogui_xl.yaml  robotnik_base_hw_sim.yaml  summit_xl.yaml  summit_xl_steel.yaml  summit_xls.yaml  summitxls.yaml
include/robotnik_base_hw_sim/: robotnik_elevator_controller.h
launch/: elevator_fake_pickup_gazebo.launch  rb1_hw_sim.launch  rb2_hw_sim.launch  rb_theron_hw_sim.launch  rbvogui_hw_sim.launch  robotnik_base_hw_sim.launch  summit_xl_hw_sim.launch
msg/: PickState.msg  PickStates.msg
src/: robotnik_elevator_controller.cpp
src/robotnik_base_hw_sim/: elevator_fake_pickup_gazebo.py  robotnik_base_hw_sim_node.py
srv/: Pick.srv  Place.srv  SimplePick.srv  SimplePlace.srv
